Button click, Intent , Toast , harcoded text

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
@@ -33,7 +33,14 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="italic|bold"
-        android:text="Hello World!"
+        android:text="@string/hello"
        />
+
+    <Button
+        android:id="@+id/btnClick"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/click"
+        />
 
 </LinearLayout>
