--- a/app/src/main/res/layout/activity_relative.xml
+++ b/app/src/main/res/layout/activity_relative.xml
@@ -1,25 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".RelativeActivity">
 
     <TextView
+        android:id="@+id/getData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/relative"
-        android:textSize="50dp"
-        />
+        android:textSize="50dp" />
 
-    <ImageView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/img"
+        android:padding="40dp"
+        android:background="@mipmap/ic_launcher"
+        android:layout_below="@+id/getData"
+        >
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:background="@color/black"
-        />
+        android:src="@drawable/img" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/img1"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/img"
+        android:background="@color/black"
+        android:src="@drawable/img" />
+
+    <ImageView
+        android:id="@+id/img2"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/img"
+        android:background="@color/black"
+        android:src="@drawable/img" />
+
+    <ImageView
+        android:id="@+id/img3"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/img1"
+        android:layout_toEndOf="@+id/img2"
+        android:background="@color/black"
+        android:src="@drawable/img" />
+    </RelativeLayout>
+
+</RelativeLayout>
