AlertDialog, Single choice , Binding

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,5 +51,11 @@
         android:layout_height="wrap_content"
         android:text="@string/click"
         />
+    <Button
+        android:id="@+id/btnAlertDialog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="AlertDialog Activity"
+        />
 
 </LinearLayout>
