--- a/app/src/main/res/layout/activity_alert_dialog.xml
+++ b/app/src/main/res/layout/activity_alert_dialog.xml
@@ -10,6 +10,12 @@
     tools:context=".AlertDialogActivity">
 
     <Button
+        android:id="@+id/btnSnackbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Snackbar"
+        />
+    <Button
         android:id="@+id/btnBasicAD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,6 +26,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Single Choice AlertDialog"
+        />
+    <Button
+        android:id="@+id/btnMutipleChoiceAD"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Multiple Choice AlertDialog"
+        />
+ <Button
+        android:id="@+id/btnCustomDalog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CustomDalog"
         />
 
 </LinearLayout>
