--- a/app/src/main/res/layout/activity_alert_dialog.xml
+++ b/app/src/main/res/layout/activity_alert_dialog.xml
@@ -13,31 +13,36 @@
         android:id="@+id/btnSnackbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Snackbar"
-        />
+        android:text="Snackbar" />
+
     <Button
         android:id="@+id/btnBasicAD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AlertDialog"
-        />
-  <Button
+        android:text="AlertDialog" />
+
+    <Button
         android:id="@+id/btnSingleChoiceAD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Single Choice AlertDialog"
-        />
+        android:text="Single Choice AlertDialog" />
+
     <Button
         android:id="@+id/btnMutipleChoiceAD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Multiple Choice AlertDialog"
-        />
- <Button
+        android:text="Multiple Choice AlertDialog" />
+
+    <Button
         android:id="@+id/btnCustomDalog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CustomDalog"
-        />
+        android:text="CustomDalog" />
+
+    <Button
+        android:id="@+id/btnDatePicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date Picker" />
 
 </LinearLayout>
