--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,5 +57,11 @@
         android:layout_height="wrap_content"
         android:text="AlertDialog Activity"
         />
+ <Button
+        android:id="@+id/btnImplicit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Implicit Activity"
+        />
 
 </LinearLayout>
