--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,10 +62,15 @@
         android:layout_height="wrap_content"
         android:text="Implicit Activity" />
 
-  <Button
+    <Button
         android:id="@+id/btnJetPack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="JetPack Activity" />
+    <Button
+        android:id="@+id/btnSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Spinner Activity" />
 
 </LinearLayout>
