List View with array adapter

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,5 +72,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Spinner Activity" />
+ <Button
+        android:id="@+id/btnList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="List Activity" />
 
 </LinearLayout>
