List with Base Adapter

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,5 +86,11 @@
         android:layout_height="wrap_content"
         android:text="WebView Activity" />
 
+   <Button
+        android:id="@+id/btnListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ListView Activity" />
+
 
 </LinearLayout>
