--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,6 +91,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="ListView Activity" />
+    <Button
+        android:id="@+id/btnRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="RecyclerView Activity" />
 
 
 </LinearLayout>
