--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,5 +97,11 @@
         android:layout_height="wrap_content"
         android:text="RecyclerView Activity" />
 
+ <Button
+        android:id="@+id/btnInteraction"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Interaction Activity" />
+
 
 </LinearLayout>
