--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -102,6 +105,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Interaction Activity" />
-
+    <Button
+        android:id="@+id/btnFirebaseReg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="FirebaseReg Activity" />
 
 </LinearLayout>
+</ScrollView>
