--- a/app/src/main/res/layout/activity_realtime.xml
+++ b/app/src/main/res/layout/activity_realtime.xml
@@ -40,7 +40,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="30dp"
-        android:src="@drawable/ic_add" />
+        android:src="@drawable/baseline_add_24" />
 
 
 </RelativeLayout>
