--- a/app/src/main/res/layout/activity_exo_player_video.xml
+++ b/app/src/main/res/layout/activity_exo_player_video.xml
@@ -7,4 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".video_view.ExoPlayerVideoActivity">
 
+    <androidx.media3.ui.PlayerView
+        android:id="@+id/player_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:use_controller="true"
+        app:resize_mode="fit"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
