--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,6 +126,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Location Activity" />
+<Button
+        android:id="@+id/btnMapsActivity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Maps Activity" />
 
 </LinearLayout>
 </ScrollView>
